Added image role and aria label to component

--- a/flag-icon.html
+++ b/flag-icon.html
@@ -10,7 +10,7 @@
 		line-height: 0;
 	">
   <template>
-	<div title="{{title}}" style="
+	<div title="{{title}}" role="image" aria-label="{{title}}" style="
 		background: url({{src}});
 		background-size: 100% 100%;
 		background-position: center center;
