--- a/flag-icon.html
+++ b/flag-icon.html
@@ -19,6 +19,7 @@
 		background-position: center center;
 		width: {{computedWidth}}px;
 		height: {{computedHeight}}px;
+		display: inline-block;
 	"></div>
   </template>
   <script>
