--- a/flag-icon.html
+++ b/flag-icon.html
@@ -456,7 +456,7 @@
 				{ name: ['Saxony','Free State of Saxony'], endonym: ['Freistaat Sachsen'], nuts: 'DED' },
 				{ name: 'Saxony-Anhalt', endonym: ['Sachsen-Anhalt'], nuts: 'DEE' },
 				{ name: 'Schleswig-Holstein', nuts: 'DEF' },
-				{ name: ['Thuringia','Free State of Thuringia'], endonym: ['Freistaat Th\u00FCringen','Freistaat Th\u00FCringen'], nuts: 'DEG' }
+				{ name: ['Thuringia','Free State of Thuringia'], endonym: ['Freistaat Th\u00FCringen'], nuts: 'DEG' }
 			];
 			var au_states = [
 				{ name: 'Australian Capital Territory', postal: 'ACT', iso: 'AU-ACT' },
