inline-block icon's div

--- a/flag-icon.html
+++ b/flag-icon.html
@@ -20,6 +20,7 @@
 			width: {{computedWidth}}px;
 			height: {{computedHeight}}px;
 			background-repeat: no-repeat;
+			display: inline-block;
 		"></div>
 	</template>
 	<script>
