change header for component.kitchen

--- a/flag-icon.html
+++ b/flag-icon.html
@@ -1,5 +1,7 @@
 <!--
- https://github.com/stevenrskelton/flag-icon
+https://github.com/stevenrskelton/flag-icon
+@element flag-icon
+@demo http://files.stevenskelton.ca/flag-icon/examples/
 -->
 
 <link rel="import" href="../polymer/polymer.html">
