--- a/examples/us-states.html
+++ b/examples/us-states.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<script src="../../platform/platform.js"></script>
+	<script src="../../webcomponentsjs/webcomponents.min.js"></script>
 	<link rel="import" href="../flag-icon.html">
 	<link rel="import" href="index-links.html">
 	<link rel="import" href="flag-show.html">
