better styling of demos

--- a/examples/canada-australia.html
+++ b/examples/canada-australia.html
@@ -12,7 +12,7 @@
   <body unresolved>
 	<index-links page="canada-australia.html"></index-links>
 
-	<h1>&lt;flag-icon&gt; Demos</h1>
+	<h1>Canadian and Australian Flags</h1>
 
 	<table style="width:700px;display:block;">
 		<tr>
