--- a/examples/countries.html
+++ b/examples/countries.html
@@ -12,7 +12,7 @@
 <body unresolved>
 	<index-links page="countries.html"></index-links>
 
-	<h1>&lt;flag-icon&gt; Demos</h1>
+	<h1>World Country Flags</h1>
 
 	<table style="width:700px">
 		<tr>
