--- a/examples/maritime.html
+++ b/examples/maritime.html
@@ -20,7 +20,7 @@
   <body unresolved>
 	<index-links page="maritime.html"></index-links>
 
-	<h1>&lt;flag-icon&gt; Demos</h1>
+	<h1>Maritime and International Code of Signals Flags</h1>
 
 	<h2>SVG</h2>
 
