--- a/examples/racing.html
+++ b/examples/racing.html
@@ -20,7 +20,7 @@
   <body unresolved>
 	<index-links page="racing.html"></index-links>
 
-	<h1>&lt;flag-icon&gt; Demos</h1>
+	<h1>NASCAR and IndyCar Racing Flags</h1>
 
 	<h2>SVG</h2>
 
