--- a/examples/themes.html
+++ b/examples/themes.html
@@ -55,7 +55,7 @@
 <body unresolved>
 	<index-links page="themes.html"></index-links>
 
-	<h1>&lt;flag-icon&gt; Demos</h1>
+	<h1>Theming of &lt;flag-icon&gt;</h1>
 
 	<ul>
 		<li>
