--- a/examples/us-states.html
+++ b/examples/us-states.html
@@ -12,7 +12,7 @@
   <body unresolved>
 	<index-links page="us-states.html"></index-links>
 
-	<h1>&lt;flag-icon&gt; Demos</h1>
+	<h1>United States of America Flags</h1>
 
 	<table width="700px">
 		<tr>
