--- a/examples/germany.html
+++ b/examples/germany.html
@@ -10,26 +10,25 @@
 	<link rel="import" href="flag-show.html">
   </head>
   <body unresolved>
-	<index-links page="brazil.html"></index-links>
+	<index-links page="germany.html"></index-links>
 
-	<h1>Brazilian Flags</h1>
+	<h1>German Flags</h1>
 
 	<table style="width:700px;min-height:650px;display:block;">
 		<tr>
-			<th style="width:250px">Brazilian State</th>
-			<th style="width:150px;">ISO</th>
-			<th style="width:100px;">Alpha2</th>
+			<th style="width:450px">German State</th>
+			<th style="width:450px">Endonym</th>
+			<th style="width:100px;">NUTS</th>
 			<th>SVG</th>
 		</tr>
-		<template id="flagsbr" repeat="[[flags]]">
-			<tr onmouseover="changeShow('[[iso]]');">
-				<td><flag-icon key="[[name]]" br img></flag-icon>[[name]]</td>
-				<td><flag-icon key="[[iso]]" br img></flag-icon> [[iso]]</td>
-				<td><flag-icon key="[[alpha2]]" br img></flag-icon> [[alpha2]]</td>
-				<td><flag-icon key="[[alpha2]]" br></flag-icon></td>
+		<template id="flagsde" repeat="[[flags]]">
+			<tr onmouseover="changeShow('[[nuts]]');">
+				<td><flag-icon key="[[name]]" de img></flag-icon>[[name]]</td>
+				<td><flag-icon key="[[endonym]]" de img></flag-icon>[[endonym]]</td>
+				<td><flag-icon key="[[nuts]]" de img></flag-icon> [[nuts]]</td>
+				<td><flag-icon key="[[nuts]]" de></flag-icon></td>
 			</tr>
 		</template>
-
 	</table>
 
 	<flag-show id="show"></flag-show>
@@ -44,17 +43,18 @@
 	};
 	function changeShow(key){
 		document.getElementById('show').key = key;
-		var data = flagicon.br_states.filter(function(row){ return row.iso == key; })[0];
+		var data = flagicon.de_states.filter(function(row){ return row.nuts == key; })[0];
+		document.getElementById('show').de = true;
 		document.getElementById('show').name = head(data.name);
-		document.getElementById('show').br = true;
+		document.getElementById('show').endonym = head(data.endonym);
 		document.getElementById('show').data = data;
 	}
 	window.addEventListener('polymer-ready', function(){
 		flagicon = new FlagIcon();
-		document.getElementById('flagsbr').model = {
-			flags: flagicon.br_states.map(function(t){ return { name: head(t.name), iso: t.iso, alpha2: t.alpha2 }; })
+		document.getElementById('flagsde').model = {
+			flags: flagicon.de_states.map(function(t){ return { name: head(t.name), nuts: t.nuts, endonym: head(t.endonym) }; })
 		};
-		changeShow('BR-RJ');
+		changeShow('DE3');
 	});
 	</script>
   </body>
