--- a/examples/index-links.html
+++ b/examples/index-links.html
@@ -22,13 +22,14 @@
 		example: [
 			{ href:"index.html", name:"General Use" },
 			{ href:"themes.html", name:"Themes" },
-			{ href:"countries.html", name:"World Country Flags" },
-			{ href:"us-states.html", name: "USA Flags" },
-			{ href:"canada-australia.html", name: "Canada and Australia Flags" },
-			{ href:"germany-spain.html", name: "German and Spanish Flags" },
-			{ href:"brazil.html", name: "Brazil Flags" },
-			{ href:"maritime.html", name: "Maritime and ICS Flags" },
-			{ href:"racing.html", name: "NASCAR and IndyCar Racing Flags" }
+			{ href:"countries.html", name:"World Countries" },
+			{ href:"us-states.html", name: "USA" },
+			{ href:"canada-australia.html", name: "Canada and Australia" },
+			{ href:"germany.html", name: "Germany" },
+			{ href:"spain.html", name: "Spain" },
+			{ href:"brazil.html", name: "Brazil" },
+			{ href:"maritime.html", name: "Maritime and ICS" },
+			{ href:"racing.html", name: "NASCAR and IndyCar Racing" }
 		]
 	});
 	function insertCss( code ) {
