--- a/examples/spain.html
+++ b/examples/spain.html
@@ -10,31 +10,16 @@
 	<link rel="import" href="flag-show.html">
   </head>
   <body unresolved>
-	<index-links page="germany-spain.html"></index-links>
+	<index-links page="spain.html"></index-links>
 
-	<h1>&lt;flag-icon&gt; Demos</h1>
+	<h1>Spainish Flags</h1>
 
 	<table style="width:700px;min-height:650px;display:block;">
 		<tr>
-			<th style="width:450px">German State</th>
-			<th style="width:450px">Endonym</th>
-			<th style="width:100px;">NUTS</th>
+			<th>Spanish Autonomous Community</th>
+			<th>Endonym</th>
+			<th>ISO</th>
 			<th>SVG</th>
-		</tr>
-		<template id="flagsde" repeat="[[flags]]">
-			<tr onmouseover="changeShow('[[nuts]]');">
-				<td><flag-icon key="[[name]]" de img></flag-icon>[[name]]</td>
-				<td><flag-icon key="[[endonym]]" de img></flag-icon>[[endonym]]</td>
-				<td><flag-icon key="[[nuts]]" de img></flag-icon> [[nuts]]</td>
-				<td><flag-icon key="[[nuts]]" de></flag-icon></td>
-			</tr>
-		</template>
-
-		<tr>
-			<th style="padding-top:20px">Spanish Autonomous Community</th>
-			<th style="padding-top:20px">Endonym</th>
-			<th style="padding-top:20px">ISO</th>
-			<th style="padding-top:20px">SVG</th>
 		</tr>
 		<template id="flagses" repeat="[[flags]]">
 			<tr onmouseover="changeShow('[[iso]]');">
@@ -59,27 +44,17 @@
 	function changeShow(key){
 		document.getElementById('show').key = key;
 		var data = flagicon.de_states.filter(function(row){ return row.nuts == key; })[0];
-		if(data){
-			document.getElementById('show').de = true;
-			document.getElementById('show').es = false;
-		}else{
-			data = flagicon.es_autonomy.filter(function(row){ return row.iso == key; })[0];
-			document.getElementById('show').de = false;
-			document.getElementById('show').es = true;
-		}
+		document.getElementById('show').es = true;
 		document.getElementById('show').name = head(data.name);
 		document.getElementById('show').endonym = head(data.endonym);
 		document.getElementById('show').data = data;
 	}
 	window.addEventListener('polymer-ready', function(){
 		flagicon = new FlagIcon();
-		document.getElementById('flagsde').model = {
-			flags: flagicon.de_states.map(function(t){ return { name: head(t.name), nuts: t.nuts, endonym: head(t.endonym) }; })
-		};
 		document.getElementById('flagses').model = {
 			flags: flagicon.es_autonomy.map(function(t){ return { name: head(t.name), iso: t.iso, endonym: head(t.endonym) }; })
 		};
-		changeShow('DE3');
+		changeShow('ES-CT');
 	});
 	</script>
   </body>
