Fix Brazil radio id/label
So clicking on the label for "Canadian Province" will actually trigger the correct input

--- a/examples/index.html
+++ b/examples/index.html
@@ -39,7 +39,7 @@
 						<td>
 							<input type="radio" name="flagtype" value="country" onchange="classbind(this,'Canada')" checked id="country"><label for="country">Country</label><br>
 							<input type="radio" name="flagtype" value="au" onchange="classbind(this,'New South Wales')" id="au"><label for="au">Australian State</label><br>
-							<input type="radio" name="flagtype" value="br" onchange="classbind(this,'Rio de Janeiro')" id="ca"><label for="ca">Brazilian State</label><br>
+							<input type="radio" name="flagtype" value="br" onchange="classbind(this,'Rio de Janeiro')" id="br"><label for="br">Brazilian State</label><br>
 							<input type="radio" name="flagtype" value="ca" onchange="classbind(this,'Nunavut')" id="ca"><label for="ca">Canadian Province</label><br>
 							<input type="radio" name="flagtype" value="de" onchange="classbind(this,'Berlin')" id="de"><label for="de">German State</label><br>
 							<input type="radio" name="flagtype" value="es" onchange="classbind(this,'Andaluc\u00EDa')" id="es"><label for="es">Spanish Autonomy</label><br>
