fix title binding

--- a/flag-icon.html
+++ b/flag-icon.html
@@ -15,14 +15,14 @@ https://github.com/stevenrskelton/flag-icon
       width: 100%;
       @apply(--layout-flex);
     }
-    
+
     iron-image {
       height: 100%;
       width: 100%;
       @apply(--layout-flex);
     }
     </style>
-    <iron-image src="{{src}}" title="[[title]]" aria-label$="[[title]]" sizing="contain"></iron-image>
+    <iron-image src="{{src}}" title$="[[title]]" aria-label$="[[title]]" sizing="contain"></iron-image>
   </template>
   <script>
   'use strict';
