--- a/flag-icon.html
+++ b/flag-icon.html
@@ -1,7 +1,14 @@
 <!--
-https://github.com/stevenrskelton/flag-icon
+A web component that can be used to display flags by passing country name or one of multiple codes.
+### Example:
+    <flag-icon key="ca"></flag-icon>
+    <flag-icon key="canada"></flag-icon>
+    <flag-icon key="124"></flag-icon>
+    <flag-icon key="can">Flag of Canada</flag-icon>  
+
+
 @element flag-icon
-@demo http://files.stevenskelton.ca/flag-icon/examples/
+@demo demo/index.html
 -->
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-image/iron-image.html">
