--- a/examples/maritime.html
+++ b/examples/maritime.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.6.1/webcomponents.min.js"></script>
+	<script src="https://stevenrskelton.github.io/polymer/bower_components/webcomponentsjs/webcomponents.min.js"></script>
 	<link rel="import" href="../flag-icon.html">
 	<link rel="import" href="index-links.html">
 	<style>
