https://www.stevenskelton.ca/polymer

--- a/examples/json-stringify.html
+++ b/examples/json-stringify.html
@@ -1,4 +1,4 @@
-<link rel="import" href="https://www.stevenskelton.ca/polymerpolymer.html">
+<link rel="import" href="https://www.stevenskelton.ca/polymer/polymer.html">
 <polymer-element name="json-stringify" attributes="data">
 	<template><pre style="text-align:left">{{json}}</pre></template>
 	<script>
